--- a/casadocodigo/pom.xml
+++ b/casadocodigo/pom.xml
@@ -155,6 +155,11 @@
     <version>4.1.0.RELEASE</version>
     <scope>test</scope>
 </dependency>
+<dependency>
+    <groupId>javax.mail</groupId>
+    <artifactId>mail</artifactId>
+    <version>1.4.7</version>
+</dependency>
 </dependencies>
 
   <build>
